<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/newBehavior1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addBehavior1"
        android:inputType="text" />

    <EditText
        android:id="@+id/newBehavior2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addBehavior2"
        android:inputType="text" />

    <EditText
        android:id="@+id/newBehavior3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addBehavior3"
        android:inputType="text" />

    <EditText
        android:id="@+id/newBehavior4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addBehavior4"
        android:inputType="text" />

</LinearLayout>