<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_frag_main">

    <Button
        android:id="@+id/btnManage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Manage"
        android:textSize="@dimen/activity_button_size" />

    <Button
        android:id="@+id/btnCollect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Collect"
        android:textSize="@dimen/activity_button_size" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/View"
        android:textSize="@dimen/activity_button_size" />

    <Button
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Export"
        android:textSize="@dimen/activity_button_size" />

</LinearLayout>