<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labelIDHint"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trackingIntervals"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <RadioGroup
        android:id="@+id/radioMinutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioFifteen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/fifteenMinutes" />

        <RadioButton
            android:id="@+id/radioThirty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:checked="true"
            android:text="@string/thirtyMinutes" />

    </RadioGroup>

</LinearLayout>