<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.dobs.Activities.EventActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2sp"
        android:text="@string/labelEvent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="60sp">

        <CheckBox
            android:id="@+id/checkFall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fall"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="35sp" />

        <CheckBox
            android:id="@+id/checkPRN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PRN"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="35sp" />

        <CheckBox
            android:id="@+id/checkAggressive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Aggressive"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
