<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelExport"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:focusable="false"
            android:hint="@string/labelStartDate"
            android:textAlignment="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:text="to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:focusable="false"
            android:hint="@string/labelEndDate"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_weight="45"
            android:text="Export" />

        <View
            android:layout_width="0dp"
            android:layout_height="70sp"
            android:layout_weight="10" />


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_weight="45"
            android:text="Cancel" />

    </LinearLayout>


</LinearLayout>
